added js and html

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    yeet
+    <h1>Park Browser</h1>
+    <section class="park-search">
+        <h3>Please input all of the States you would like to search from, and the max number of results to receive.  Then click submit to receive the results.</h3>
+        <form>
+            <label for="states">States</label>
+            <input type="text" name="park-form" id="states" aria-labelledby="states" placeholder="Input States">
+            <label for="maxResults">Max Results</label>
+            <input type="text" name="park-form" id="maxResults" aria-labelledby="maxResults" placeholder='10'>
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+    <section id="park-results">
+
+    </section>
 </body>
 </html>
